--- a/.github/workflows/android-ci.yml
+++ b/.github/workflows/android-ci.yml
@@ -1,7 +1,12 @@
+name: Android CI
+
+permissions:
+  contents: write
+
 on:
   push:
     branches: [ main ]
-    tags: [ "v*" ]  # 只有 tag 才完整构建
+    tags: [ "v*" ]
   pull_request:
     branches: [ main ]
   workflow_dispatch:
@@ -9,19 +14,28 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
           java-version: "17"
           distribution: "temurin"
-          
-      # 只在 tag 推送时签名
+          cache: gradle
+
+      - name: Make gradlew executable
+        run: chmod +x ./gradlew
+
+      # 只在 tag 推送时解码密钥库
       - name: Decode keystore (tag only)
         if: startsWith(github.ref, 'refs/tags/')
         run: |
           echo "${{ secrets.ANDROID_KEYSTORE_BASE64 }}" | base64 -d > $GITHUB_WORKSPACE/release.jks
-          
+          ls -lah $GITHUB_WORKSPACE/release.jks
+
       - name: Build APK
         env:
           KEYSTORE_PATH: ${{ github.workspace }}/release.jks
@@ -29,6 +43,7 @@ jobs:
           KEY_ALIAS: ${{ secrets.ANDROID_KEY_ALIAS }}
           KEY_PASSWORD: ${{ secrets.ANDROID_KEY_PASSWORD }}
         run: |
+          chmod +x ./gradlew
           if [[ "${{ github.ref }}" == refs/tags/* ]]; then
             # tag 推送：签名构建
             ./gradlew assembleRelease \
@@ -40,3 +55,43 @@ jobs:
             # 普通推送：不签名构建
             ./gradlew assembleRelease
           fi
+
+      - name: Upload APK (all runs)
+        uses: actions/upload-artifact@v4
+        with:
+          name: app-release-apk-${{ github.run_number }}
+          path: app/build/outputs/apk/release/*.apk
+          if-no-files-found: warn
+
+      - name: Create GitHub Release (tag only)
+        if: startsWith(github.ref, 'refs/tags/')
+        uses: softprops/action-gh-release@v2
+        with:
+          name: EncryptionChat ${{ github.ref_name }}
+          tag_name: ${{ github.ref_name }}
+          files: app/build/outputs/apk/release/*.apk
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      # OSS 上传：仅 tag
+      - name: Install ossutil
+        if: startsWith(github.ref, 'refs/tags/')
+        run: |
+          curl -L https://gosspublic.alicdn.com/ossutil/1.7.9/ossutil64 -o /usr/local/bin/ossutil
+          chmod +x /usr/local/bin/ossutil
+
+      - name: Upload Release APK to OSS (tag only)
+        if: startsWith(github.ref, 'refs/tags/')
+        env:
+          OSS_KEY: ${{ secrets.ALI_OSS_KEY }}
+          OSS_SECRET: ${{ secrets.ALI_OSS_SECRET }}
+        run: |
+          ossutil config \
+            --access-key-id=$OSS_KEY \
+            --access-key-secret=$OSS_SECRET \
+            --endpoint=oss-cn-guangzhou.aliyuncs.com
+
+          ossutil cp \
+            app/build/outputs/apk/release/*.apk \
+            oss://kgyydsgithub/ci-builds/app-release.apk \
+            -f
